--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -7,9 +7,9 @@
   /* palette */
   --black-fade-5: rgba(0, 0, 0, 0.05);
   --black-fade-40: rgba(0, 0, 0, 0.4);
-  --grey-90: #232129;
-  --grey-50: #78757a;
-  --green-80: #088413;
+  --grey-90: #080808;
+  --grey-50: #d43961;
+  --green-80: #429bdf;
   --green-50-rgb: 55, 182, 53;
   --white: #ffffff;
 
